Bugfix overflow body hidden;

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,9 +24,19 @@ header {
     z-index: 999;
 }
 
+#menuWrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    overflow: auto;
+}
+
 #menu {
     position: relative;
-    z-index: 999;
+    padding-top: 70px;
 }
 
 .logo {
@@ -42,6 +52,7 @@ header {
 .exit {
     display: none;
     position: fixed;
+    z-index: 100;
     right: 20px;
     top: 10px;
     font-size: 25px;
